LIMA-309: Fixed misaligned shadow

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -13078,6 +13078,7 @@ span.sprite-icons.webmaster-border {
   position: absolute;
   width: 64px;
   height: 64px;
+  text-align: center;
 }
 .top-match-block .score-board .team img {
   max-width: 60px;
