--- a/src/css/less/livescore/rules/ls-top-match-block.less
+++ b/src/css/less/livescore/rules/ls-top-match-block.less
@@ -132,7 +132,8 @@
         position: absolute;
         width: 64px;
         height: 64px;
-        
+        text-align: center;
+
         img{
           max-width: 60px;
           max-height: 60px;
